dhall/tests/type-inference/failure/unit/UnionTypeDuplicateVariants2.txt
Type error: error: UnionTypeDuplicateField
 --> <current file>:1:0
  |
1 | <x | x: Natural>
  | ^^^^^^^^^^^^^^^^ UnionTypeDuplicateField
  |
